--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Snake Cess</title>
+  <title>Snake Game</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
@@ -52,7 +52,7 @@
 </head>
 <body>
 
-  <h1>Snake Cess</h1>
+  <h1>Snake Game</h1>
    <p class="score">Score: <span id="score">0</span></p>
   <canvas id="game" width="400" height="400"></canvas>
 
